# TECCOD_project

./: .gitignore  Dockerfile  README.md  app.py  docker compose.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
