[project]
name = "teccod-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
 "certifi==2025.8.3",
 "charset-normalizer==3.4.3",
 "events==0.5",
 "faker==37.5.3",
 "idna==3.10",
 "opensearch-py==3.0.0",
 "python-dateutil==2.9.0.post0",
 "requests==2.32.4",
 "six==1.17.0",
 "tzdata==2025.2",
 "urllib3==2.5.0",

]
